--- a/Exercises/Binary/DprobsAll.html
+++ b/Exercises/Binary/DprobsAll.html
@@ -9,10 +9,10 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
       height: 300px;
-      border: 0;
     }
   </style>
 </head>
@@ -60,7 +60,7 @@ var initJSAV = function () {
       <var id="ANS">4</var>
     </div>
     <p class="problem">
-      <div id="jsav"></div>
+      <div id="jsav" class="jsavcanvas"></div>
     </p>
     <p class="question">How many leaf nodes does this tree have?</p>
     <p class="solution" data-type="text"><var>ANS</var></p>
@@ -71,9 +71,9 @@ var initJSAV = function () {
       <var id="ANS">6</var>
     </div>
     <p class="problem">
-      <div id="jsav"></div>
+      <div id="jsav" class="jsavcanvas"></div>
     </p>
-    <p class="question">How many nodes in the tree have a sibling?</p>
+    <p class="question">How many nodes in the tree have at least one sibling?</p>
     <p class="solution" data-type="text"><var>ANS</var></p>
   </div>
 
@@ -82,7 +82,7 @@ var initJSAV = function () {
       <var id="ANS">8</var>
     </div>
     <p class="problem">
-      <div id="jsav"></div>
+      <div id="jsav" class="jsavcanvas"></div>
     </p>
     <p class="question">How many descendents does the root of this
 tree have?</p>
@@ -90,7 +90,7 @@ tree have?</p>
   </div>
 
   <div id="TreeHeight">
-    <div id="jsav"></div>
+    <div id="jsav" class="jsavcanvas"></div>
     <p class="question">What is the height of this tree?</p>
     <div class="solution"><var>4</var></div>
     <ul class="choices" data-category="true">
@@ -109,7 +109,7 @@ tree have?</p>
   </div>
 
   <div id="TreeDepth">
-    <div id="jsav"></div>
+    <div id="jsav" class="jsavcanvas"></div>
     <p class="question">What is the depth of this tree?</p>
     <div class="solution"><var>"Trees have height -- they do not have depth"</var></div>
     <ul class="choices" data-category="true">
@@ -128,7 +128,7 @@ tree have?</p>
   </div>
 
   <div id="TreeDepth">
-    <div id="jsav"></div>
+    <div id="jsav" class="jsavcanvas"></div>
     <p class="question">Which statement is correct?</p>
     <div class="solution"><var>"The tree is neither full nor complete"</var></div>
     <ul class="choices">
