Put defaults for proficiency exercise grading into book configurations

--- a/AV/Sorting/shellsortPRO.html
+++ b/AV/Sorting/shellsortPRO.html
@@ -39,9 +39,11 @@
 
       <ol id="profArray"></ol>
 
-      <input type="button" id="selecting" name="selecting" />
-      <input type="button" id="sorting" name="sorting" />
-      <input type="button" id="incrementing" name="incrementing" />
+      <p align="center">
+	<input type="button" id="selecting" name="selecting" />
+	<input type="button" id="sorting" name="sorting" />
+	<input type="button" id="incrementing" name="incrementing" />
+      </p>
 
       <p class="jsavoutput jsavline"></p>
     </div>
