Minor fixes by Taylor Rydahl to lambda calculus visualizations and exercises

--- a/Exercises/Development/AlphaConversionChoice.html
+++ b/Exercises/Development/AlphaConversionChoice.html
@@ -21,22 +21,23 @@
 		<var id="Option1">alphaChoice()</var>
 		<var id="Option2">alphaChoice()</var>
 		<var id="Option3">alphaChoice()</var>
+		<var id="Option4">alphaChoice()</var>
 	</div>
 	<div class="problems">
-		<div id="problem-type-or-description">
-			<div class="question"><p> What of the following is a correct result of alpha-conversion on the following
+		<div>
+			<div class="question"><p>What of the following is a correct result of alpha-conversion on the following
 				lambda calculus expression?</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution"><var>CorrectAnswer</var></div>
 			<ul class="choices" data-category="true">
-			<li><var>Option1</var></li>
-			<li><var>Option2</var></li>
-			<li><var>Option3</var></li>
-			<li><var>CorrectAnswer</var></li>
+				<li><var>Option1</var></li>
+				<li><var>Option2</var></li>
+				<li><var>Option3</var></li>
+				<li><var>Option4</var></li>
 			</ul>
 			<div class="hints"><p><var>CorrectAnswer</var></p></div>
-		</div> 
+		</div>
 	</div>
 </div>
 </body>
