--- a/AV/Binary/huffmanBuildAV.html
+++ b/AV/Binary/huffmanBuildAV.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Huffman Coding Tree</title>
+  <title>Huffman Coding Tree Build Visualization</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="HuffmanCoding.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+  <link rel="stylesheet" href="huffman.css" type="text/css" />
   <style>
-  <!--
-  /* Since this AV does not have a form element, the change to the avcontainer
-  margin was covering part of the title */
-  .avcontainer {
-    margin-top: 0;
-  }
-  -->
+    #container {
+      width: 800px;
+      height: 655px;
+    }
   </style>
 </head>
 
@@ -22,15 +20,18 @@
   <table class="headerTable">
     <tr>
       <td class="headerLeft"></td>
-      <td class="headerCenter avTitle">
-        Huffman Coding Tree Visualization
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
+  <form id="ssperform">
+    <!-- We don't actually have anything to put here because there is
+         no input. But we do need some spacing. -->
+    <p></p>
+  </form>
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
@@ -45,6 +46,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="HuffmanCoding.js"></script>
+<script src="huffman.js"></script>
+<script src="huffmanBuildAV.js"></script>
 </body>
 </html>
