--- a/AV/Development/bintreeAV.html
+++ b/AV/Development/bintreeAV.html
@@ -12,19 +12,14 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
-      </td>
-      <td class="headerCenter">
-        <h1>Bintree Visualization</h1>
-      </td>
+      <td class="headerLeft"></td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
-
   <form id="ssperform">
     <p>
       <input type="button" id="run" name="run" value="Run" />
@@ -45,7 +40,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="bintreeAV.js"></script>
 </body>
 </html>
