Move more new materials into public view

--- a/AV/Development/BufferPoolAV.html
+++ b/AV/Development/BufferPoolAV.html
@@ -13,8 +13,11 @@
     
     <table class="headerTable">
       <tr>
-        <td class="headerCenter">
-          <h1>Buffer Pool Visualization</h1>
+        <td class="headerLeft"></td>
+        <td class="headerCenter avTitle">Buffer Pool Visualization</td>
+        <td class="headerRight">
+          <input type="button" id="about" name="about" />
+          <a id="settings" class="jsavsettings" href="#"></a>
         </td>
       </tr>
     </table>
@@ -86,7 +89,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
-  <script src="BufferPoolTestAV.js"></script>
+  <script src="BufferPoolAV.js"></script>
 
 </body>
 </html>
