Added optional code to BSTinsertPRO

--- a/AV/Binary/BSTinsertPRO.html
+++ b/AV/Binary/BSTinsertPRO.html
@@ -9,9 +9,8 @@
   <style>
     #container {
       width: 830px;
-      height: 600px;
     }
-    .jsavtreenode 
+    .jsavtreenode {
       cursor: pointer;
     }
     .jsavstacknode {
