Added optional code to BSTremovePRO

--- a/AV/Binary/BSTremovePRO.html
+++ b/AV/Binary/BSTremovePRO.html
@@ -9,7 +9,6 @@
   <style>
     #container {
       width: 830px;
-      height: 600px;
     }
     .jsavtreenode {
       cursor: pointer;
@@ -21,7 +20,7 @@
       top: 20px;
     }
     .jsavcontainer {
-      height: 580px;
+      min-height: 540px;
     }
   </style>
 </head>
