Changed js src's to minimized files in several exercises. Some minor refactoring.

--- a/AV/Development/AVLinsertPRO.html
+++ b/AV/Development/AVLinsertPRO.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>AVL Tree Insertion</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../../lib/odsaAV.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
     .jsavtreenode {
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <h1>AVL Tree Insertion</h1>
   <div id="jsavcontainer">
+    <h1 class="exerciseTitle">AVL Tree Insertion</h1>
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       Insert the values in the stack into the tree. Balance the tree at the correct node with the correct rotation when it becomes unbalanced.
@@ -23,14 +23,16 @@
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="ClickHandler.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../JSAV/extras/AVLextension.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
+  <script src="ClickHandler.js"></script>
   <script src="AVLinsertPRO.js"></script>
 </body>
 </html>
