--- a/AV/Development/digitalSearchTreePRO.html
+++ b/AV/Development/digitalSearchTreePRO.html
@@ -4,14 +4,14 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Digital Search Tree</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <link rel="stylesheet" href="trie.css" type="text/css" />
 </head>
 
 <body>
-  <h1>Digital Search Tree</h1>
   <div id="jsavcontainer">
+    <h1 class="exerciseTitle">Digital Search Tree</h1>
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       Use the values in the stack to form a digital search tree.
@@ -19,12 +19,14 @@
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
   <script src="digitalSearchTreePRO.js"></script>
 </body>
 </html>
