--- a/AV/Development/redBlackTreeColoring.html
+++ b/AV/Development/redBlackTreeColoring.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Coloring of Red-Black Tree</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
     .treenode {
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <h1>Coloring of Red-Black Tree</h1>
   <div id="jsavcontainer">
+    <h1 class="exerciseTitle">Coloring of Red-Black Tree</h1>
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       Click on a node to toggle the color. When the tree fulfills all the requirments of a red-black tree click the grade button.  
@@ -24,13 +24,15 @@
     <div class="jsavcanvas"></div>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../JSAV/extras/AVLextension.js"></script>
   <script src="../../JSAV/extras/redblacktree.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
   <script src="redBlackTreeColoring.js"></script>
 </body>
 </html>
