--- a/AV/Binary/BSTsearchPRO.html
+++ b/AV/Binary/BSTsearchPRO.html
@@ -51,8 +51,8 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="../../lib/odsaUtils.js"></script>
-  <script src="../../lib/odsaAV.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
   <script src="BSTCODE.js"></script>
   <script src="BSTsearchPRO.js"></script>
 </body>
