--- a/AV/Development/insertionSortWithoutSwapPRO.html
+++ b/AV/Development/insertionSortWithoutSwapPRO.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Insertion Sort</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="../../lib/odsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
 </head>
 
@@ -18,13 +18,13 @@
     <p class="jsavscore"></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="../../lib/odsaUtils.js"></script>
-  <script src="../../lib/odsaAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
   <script src="ClickHandler.js"></script>
   <script src="insertionSortWithoutSwapPRO.js"></script>
 </body>
