--- a/AV/Development/redBlackTreePRO.html
+++ b/AV/Development/redBlackTreePRO.html
@@ -4,18 +4,48 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Red-Black Tree Insertion</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
-  <link rel="stylesheet" href="proficiency.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="proficiency.css" type="text/css" /> -->
   <style>
     .treenode {
-    cursor: pointer;
+      cursor: pointer;
+    }
+    .jsavtreenode.emptynode {
+      border: 1px dashed #777 !important;
+      background-color: #fff !important;
+      color: #777 !important;
+    }
+    .jsavtreenode.rednode {
+      background-color: #f00;
+      color: #fff;
+    }
+    .jsavtreenode.blacknode {
+      background-color: #000;
+      color: #fff;
+    }
+    .jsavtreenode.jsavredblacknode.selected {
+      box-shadow: 0px 0px 5px 10px #ddf;
+    }
+    .jsavstack {
+      position: relative;
+      background-color: inherit;
+    }
+    .jsavstacknode {
+      position: absolute;
+      border-radius: 5px;
+      width: 45px;
+      height: 45px;
+      z-index: 100;
+    }
+    .jsavstack .selected {
+      background-color: #ddf;
     }
   </style>
 </head>
 
 <body>
-  <h1>Red-Black Tree Insertion</h1>
   <div id="jsavcontainer">
+    <h1 class="exerciseTitle">Red-Black Tree Insertion</h1>
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
         Move the values from the stack to the tree. Color the nodes and balance the tree using rotations when it becomes necessary.
@@ -24,15 +54,17 @@
     <div class="jsavcanvas"></div>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="ClickHandler.js"></script>
   <script src="../../JSAV/extras/AVLextension.js"></script>
   <script src="../../JSAV/extras/redblacktree.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
+  <script src="ClickHandler.js"></script>
   <script src="redBlackTreePRO.js"></script>
 </body>
 </html>
