--- a/AV/Development/selectionSortPRO.html
+++ b/AV/Development/selectionSortPRO.html
@@ -4,18 +4,15 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Selection Sort</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
-    #jsavcontainer {
-      height: 500px;
-    }
   </style>
 </head>
 
 <body>
-  <h1>Selection Sort</h1>
   <div id="jsavcontainer">
+    <h1>Selection Sort</h1>
     <!-- <a class="jsavsettings" href="#">Settings</a> -->
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
@@ -25,11 +22,13 @@
     <p class="jsavscore"></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="../../lib/odsaUtils-min.js"></script>
+  <script src="../../lib/odsaAV-min.js"></script>
   <script src="selectionSortPRO.js"></script>
 </body>
 </html>
