Added instructions and Finnish translation to Digital Search Tree exercise.

--- a/AV/Development/digitalSearchTreePRO.html
+++ b/AV/Development/digitalSearchTreePRO.html
@@ -11,11 +11,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="exerciseTitle">Digital Search Tree</h1>
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Use the values in the stack to form a digital search tree.
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
