--- a/AV/Development/radixTriePRO.html
+++ b/AV/Development/radixTriePRO.html
@@ -11,11 +11,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="exerciseTitle">Radix Trie</h1>
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-        Use the values in the stack to form a radix trie.
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
