Added instructions to AVLinsertPRO

--- a/AV/Development/AVLinsertPRO.html
+++ b/AV/Development/AVLinsertPRO.html
@@ -15,11 +15,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="exerciseTitle">AVL Tree Insertion</h1>
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Insert the values in the stack into the tree. Balance the tree at the correct node with the correct rotation when it becomes unbalanced.
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
   </div>
 
