--- a/AV/Development/redBlackTreeColoring.html
+++ b/AV/Development/redBlackTreeColoring.html
@@ -15,11 +15,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1 class="exerciseTitle">Coloring of Red-Black Tree</h1>
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Click on a node to toggle the color. When the tree fulfills all the requirments of a red-black tree click the grade button.  
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
     <div class="jsavcanvas"></div>
   </div>
