Hints added to summary exercises

--- a/Exercises/RecurTutor/recSummMCQ1.html
+++ b/Exercises/RecurTutor/recSummMCQ1.html
@@ -23,6 +23,8 @@
         <li><var>"n (where n is the argument passed to the recursive call)"</var></li>
       </ul>
       <div class="hints">
+      <p> If it is only one, how can we implement something like Fibonacci function?</p>
+      <p> It can not be a fixed number, as it depends on the application.</p>
       </div>
     </div>
   </div>
