--- a/Exercises/RecurTutor/recSummMCQ2.html
+++ b/Exercises/RecurTutor/recSummMCQ2.html
@@ -23,6 +23,8 @@
         <li><var>"All of the stated reasons."</var></li>
       </ul>
       <div class="hints">
+       <p> Do you think if there is no recursive call, we will have a recursive function? </p>
+       <p> How will the recursive function stop if there is no base case? </p>
       </div>
     </div>
   </div>
