--- a/Exercises/RecurTutor/recSummTF3.html
+++ b/Exercises/RecurTutor/recSummTF3.html
@@ -13,13 +13,14 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">A properly written recursive function might have more than one recursive call.</p>
+      <p class="question">A properly written recursive function must have more than one recursive call.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
+      <p>Have not we seen in the exercises many properly written recursive functions with just one call?</p>
       </div>
     </div>
   </div>
