Hints added to some tracing exercises

--- a/Exercises/RecurTutor/rectFIB2rc18.html
+++ b/Exercises/RecurTutor/rectFIB2rc18.html
@@ -59,6 +59,8 @@ function checkAnswer(answer ,i) {
         </div>
       </div>
       <div class="hints">
+       <p> Note that: there are two recursive calls.</p>
+       <p>Don't forget that the print statement will be exectued on the rollback of each of the recursive calls.</p>
       </div>
     </div>
   </div>
