--- a/Exercises/RecurTutor/rectFIBbwd3.html
+++ b/Exercises/RecurTutor/rectFIBbwd3.html
@@ -43,6 +43,7 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+      <p>Don't forget that the print command will be exectued once the recursive call hit the basecase and is rolling back.</p>
       </div> 
   </div>
 </div>
