--- a/Exercises/RecurTutor/rectFIBfwd10.html
+++ b/Exercises/RecurTutor/rectFIBfwd10.html
@@ -54,6 +54,7 @@ function checkAnswer(answer , n) {
         </div>
       </div>
       <div class="hints">
+          <p>By tracing this recursive function, you will find that the result is adding n to n-1 to n-2 and so on till reaching to 0.</p>
       </div> 
   </div>
 </div>
