--- a/Exercises/RecurTutor/rectFIBfwd11.html
+++ b/Exercises/RecurTutor/rectFIBfwd11.html
@@ -48,6 +48,7 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+<p>Note that the print statment is executed before reaching the recursive call each time the recursive code executed.</p>
       </div> 
   </div>
 </div>
