--- a/Exercises/RecurTutor/rectFIBfwd13.html
+++ b/Exercises/RecurTutor/rectFIBfwd13.html
@@ -60,6 +60,7 @@ function checkAnswer(answer , A) {
         </div>
       </div>
       <div class="hints">
+      <p>This function is recursively summing the elements of the given array.</p>
       </div> 
   </div>
 </div>
