--- a/Exercises/RecurTutor/rectFIBfwd19.html
+++ b/Exercises/RecurTutor/rectFIBfwd19.html
@@ -67,6 +67,7 @@ function checkAnswer(answer, n) {
         </div>
       </div>
       <div class="hints">
+       <p> This function displays n in a different order by doing some mathematical operations on it.</p>
       </div>
     </div>
   </div>
