--- a/Exercises/RecurTutor/rectFIBfwd8.html
+++ b/Exercises/RecurTutor/rectFIBfwd8.html
@@ -55,6 +55,7 @@ function checkAnswer(answer , n) {
         </div>
       </div>
       <div class="hints">
+      <p> By tracing this function till reaching to the base case, 2 is multiplied by itself n times. In other words the result is 2 to the power n.</p>
       </div> 
   </div>
 </div>
