--- a/Exercises/RecurTutor/rectFIBmystbc1.html
+++ b/Exercises/RecurTutor/rectFIBmystbc1.html
@@ -50,6 +50,7 @@ function checkAnswer(answer , a) {
         </div>
       </div>
       <div class="hints">
+<p>This function adds a to itself b times.</p>
       </div> 
   </div>
 </div>
