--- a/Exercises/RecurTutor/rectMCQbc16.html
+++ b/Exercises/RecurTutor/rectMCQbc16.html
@@ -13,7 +13,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> 
-      Consider the following code::
+      Consider the following code:
       <pre>	
      void superWriteVertical(int number)
      // Postcondition: The digits of the number have been written,
@@ -42,7 +42,8 @@
         <li><var><code> number > 10</code></var></li>
       </ul>
       <div class="hints">
-      </div>
+<p>When the base case is reached, no more recursive calls are executed.</p>      
+</div>
     </div>
   </div>
 </div>
