--- a/Exercises/RecurTutor/rectMCQbwd6.html
+++ b/Exercises/RecurTutor/rectMCQbwd6.html
@@ -39,6 +39,8 @@
         <li><var>"It returns x[0] or x[n-1] whichever is larger."</var></li>
       </ul>
       <div class="hints">
+     <p> Have you seen any changes done to the x array?</p>
+     <p> Are the comparisons keep the largest or the smallest emlement?</p>
       </div>
     </div>
   </div>
