--- a/Exercises/RecurTutor/rectFIBfwd4.html
+++ b/Exercises/RecurTutor/rectFIBfwd4.html
@@ -56,6 +56,7 @@ function checkAnswer(answer , n, a , d) {
         </div>
       </div>
       <div class="hints">
+      <p> If you trace this function, you will find that d is added to it self n-1 times and in the nth time a is added to the sum.</p>
       </div> 
   </div>
 </div>
