--- a/Exercises/RecurTutor/rectFIBir12.html
+++ b/Exercises/RecurTutor/rectFIBir12.html
@@ -50,6 +50,7 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+      The base case is executed when y reaches zero while the recursive call is incrementing y. Since y is positive, then the base case will never be executed.
       </div> 
   </div>
 </div>
