--- a/Exercises/RecurTutor/rectFIBir7.html
+++ b/Exercises/RecurTutor/rectFIBir7.html
@@ -44,7 +44,8 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
-      </div> 
+<p> Initially, b equals  to zero and the recursive function keeps on decrementing B. Do you think it will ever reach to the base case?
+  </p>    </div> 
   </div>
 </div>
 </body>
