--- a/Exercises/RecurTutor/rectMCQbwd9.html
+++ b/Exercises/RecurTutor/rectMCQbwd9.html
@@ -35,6 +35,7 @@
         <li><var>"It prints only the last character of string s."</var></li>
       </ul>
       <div class="hints">
+      <p>Note that the print command is exectued after the base case is reached on the unwinding of the recursive function.<p>
       </div>
     </div>
   </div>
