Hints added to most of the tracing exercises

--- a/Exercises/RecurTutor/rectMCQfwder14.html
+++ b/Exercises/RecurTutor/rectMCQfwder14.html
@@ -28,11 +28,12 @@
       <div class="solution"><var>"Only when the length of the input string is less than 15"</var></div>
       <ul class="choices" >
 	<li><var> "Only when the length of the input string is greater than or equal to 15" </var></li>	  	 
-	<li><var><"Only when an empty sting is input"</var></li>
+	<li><var><"Only when an empty string is input"</var></li>
         <li><var>"For all string inputs"</var></li>
         <li><var>"For no string inputs"</var></li>
       </ul>
       <div class="hints">
+      <p>Think about the range of the unhandeled cases by the exisiting if statement.</p>
       </div>
     </div>
   </div>
