--- a/Exercises/RecurTutor/rectMCQresrc2.html
+++ b/Exercises/RecurTutor/rectMCQresrc2.html
@@ -34,6 +34,7 @@
         <li><var><code>n^2</code></var></li>
       </ul>
       <div class="hints">
+      <p> n is decrementing until it reaches to 1, where the recursive function hits the base case.</p>
       </div>
     </div>
   </div>
