Removed protocol from MathJax links, so that they will also work when the book is hosted over https.

--- a/AV/Development/WorstCaseQuickSortAnalysis.html
+++ b/AV/Development/WorstCaseQuickSortAnalysis.html
@@ -42,7 +42,7 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="../../JSAV/extras/binaryheap.js"></script>
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="WorstCaseQuickSortAnalysis.js"></script>
 </body>
 </html>
