--- a/AV/Hashing/Birthday.html
+++ b/AV/Hashing/Birthday.html
@@ -34,7 +34,7 @@
 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
   <script src="Birthday.js"></script>
