--- a/AV/Development/Multioutput_test.html
+++ b/AV/Development/Multioutput_test.html
@@ -43,7 +43,7 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="../../JSAV/extras/binaryheap.js"></script>
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="Multioutput_test.js"></script>
 </body>
 </html>
