--- a/lib/conceptMap.html
+++ b/lib/conceptMap.html
@@ -29,7 +29,7 @@
         
   
       <script type="text/javascript" src="../../../lib/jquery.min.js"></script>
-      <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+      <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="../../../lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../../../JSAV/lib/jquery.transit.js"></script>
     <script type="text/javascript" src="../../../JSAV/lib/raphael.js"></script>
