Added double hashing to hashingPRO

--- a/AV/Development/hashingPRO.html
+++ b/AV/Development/hashingPRO.html
@@ -30,18 +30,6 @@
     .jsavindex.jsavarrow .jsavvalue {
       background-color: #fb7;
     }
-/*    .jsavnode.insert {
-      background-color: #5cb85c;
-      border-color: #4cae4c;
-    }
-    .jsavnode.remove {
-      background-color: #d9534f;
-      border-color: #d43f3a;
-    }
-    .jsavnode.search {
-      background-color: #428bca;
-      border-color: #357ebd;
-    }*/
     .jsavnode:before {
       position: absolute;
       bottom: 2px;
@@ -64,6 +52,9 @@
     .exerciseLabel {
       text-align: center;
       font-weight: bold;
+    }
+    .jsavline {
+      height: 50px;
     }
   </style>
 </head>
