--- a/Exercises/Background/MthBgSumm.html
+++ b/Exercises/Background/MthBgSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> OpenDSA Math Bacground Chapter Summary: Summary Questions</title>
+  <title> OpenDSA Math Background Chapter Summary: Summary Questions</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -18,12 +18,3 @@
   <div class="exercise" data-name="MthBgFIBstckfn"></div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
