lib/odsaStyle-min.css included in all the Reursion Exercises

--- a/Exercises/RecurTutor/recw30PROG.html
+++ b/Exercises/RecurTutor/recw30PROG.html
@@ -10,6 +10,7 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaStyle-min.css"></script>
   <style>
     #codeTextarea{
       width:650px;
