--- a/Exercises/RecurTutor/recChapterSumm.html
+++ b/Exercises/RecurTutor/recChapterSumm.html
@@ -5,6 +5,7 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaStyle-min.css"></script>
 </head>
 
 <body>
