--- a/Exercises/RecurTutor/rectFIBmystbc1.html
+++ b/Exercises/RecurTutor/rectFIBmystbc1.html
@@ -6,9 +6,8 @@
   </script>
   <script src="../../lib/jquery-ui.min.js">
   </script>
- 
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  
+  <script src="../../lib/odsaStyle-min.css"></script>
 </head>
  
 <body>
