--- a/Exercises/RecurTutor/rectMCQbc16.html
+++ b/Exercises/RecurTutor/rectMCQbc16.html
@@ -4,8 +4,8 @@
   <title> Recursion Tracing Exercise: Base case</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
- 
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaStyle-min.css"></script>
 </head>
 
 <body>
