Working on resizing KA coding exercise

--- a/Exercises/RecurTutor/recw19PROG.html
+++ b/Exercises/RecurTutor/recw19PROG.html
@@ -12,8 +12,8 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
 <style>
-    .jsavcanvas { height: 700px;} </style>
-  <style>
+    #problemarea { height: 900px;}
+
     #codeTextarea{
       width:500px;
       height:280px;
@@ -112,6 +112,14 @@
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">    Given the following recursive function signature, write down the recursive function reverse a given stack without using any other data structures(or without extra memory). You cannot use any memory at all. All what you have to do is use recursion only to attain this. You don’t need to implement a function to push, pop or check if the stack is empty or not. You may use the given getLast function with no modifications if needed.
 <br />
+<p>more text</p>
+
+<p>more text</p>
+
+<p>more text</p>
+
+<p>more text</p>
+
 </h4>
 <textarea  id="codeTextarea"> void stackReversal(Stack s)
 {
